--- a/index.html
+++ b/index.html
@@ -44,34 +44,34 @@
     <div class="button-cluster">
       <button 
         onclick= "playGame('card1')" 
-        class="play-cards1 js-card1 css-card1">
+        class="play-cards1">
         <img class="image-control" src="icons/tumblr_ot3rlf7RE91vjrytfo1_250.jpg">
       </button>
       <button 
-        onclick= "playGame('card2')" 
-        class="play-cards1 js-card2 css-card2">
+        onclick= "playGame('card3')" 
+        class="play-cards1">
         <img class="image-control" src="icons/tumblr_ot3rs3WB1p1vjrytfo1_250.jpg">
       </button>
       <button 
         onclick= "playGame('card2')" 
-        class="play-cards1 js-card2 css-card3">
+        class="play-cards1">
         <img class="image-control" src="icons/tumblr_ot5bxaNl3R1vjrytfo1_250.jpg">
       </button>
     </div>
     <div class="button-cluster2">      
       <button 
-        onclick= "playGame('card1')" 
-        class="play-cards2 js-card1 css-card6">
+        onclick= "playGame('card3')" 
+        class="play-cards2">
         <img class="image-control" src="icons/tumblr_ov9n5hc3yf1vjrytfo1_250.jpg">
       </button>
       <button 
         onclick= "playGame('card2')" 
-        class="play-cards2 js-card2 css-card9">
+        class="play-cards2">
         <img class="image-control" src="icons/tumblr_pmbb860gw11vsss7oo1_250.png">
       </button>
       <button 
-        onclick= "playGame('card3')" 
-        class="play-cards2 js-card3 css-card5">
+        onclick= "playGame('card1')" 
+        class="play-cards2">
         <img class="image-control" src="icons/gamblerPepe.jpg">
       </button>
     </div>
