--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>BATANZA V1</title>
+  <title>Test Your Luck</title>
   <link rel="icon" type="image/x-icon" href="icons/gamblerPepe.jpg">
   <link rel="stylesheet" href="batanza.css">
 
 </head>
-<body>  
+<body>
 
 
   <div class="pop-up js-pop-up">
@@ -24,23 +24,13 @@
   <div id="overlay" class="js-overlay"></div>
 
 
-
   <div class="main-Flex-container">
     <h2 class="header-control">PLAY WITH YOUR MOOD</h2>
-      <button onclick="
-        score.wins = 0;
-        score.losses = 0;
-        score.ties = 0;
-        result = ``;
-        bankValue = 0;
-        localStorage.removeItem('score');
-        updateScoreElement();
-        staticScoreUpdate();
-        localStorage.removeItem('headerScore');
-        updateHeaderSelector();
-        localStorage.removeItem('bankValue');
-        updateBankValue();
-        " class="reset-score-button">RESET</button>
+      <button class="reset-score-button"
+        onclick="handleResetButton();"
+        >
+        RESET
+      </button>
     <div class="button-cluster">
       <button 
         onclick= "playGame('card1')" 
@@ -48,29 +38,29 @@
         <img class="image-control" src="icons/tumblr_ot3rlf7RE91vjrytfo1_250.jpg">
       </button>
       <button 
-        onclick= "playGame('card3')" 
+        onclick= "playGame('card3')"
         class="play-cards1">
         <img class="image-control" src="icons/tumblr_ot3rs3WB1p1vjrytfo1_250.jpg">
       </button>
       <button 
-        onclick= "playGame('card2')" 
+        onclick= "playGame('card2')"
         class="play-cards1">
         <img class="image-control" src="icons/tumblr_ot5bxaNl3R1vjrytfo1_250.jpg">
       </button>
     </div>
-    <div class="button-cluster2">      
+    <div class="button-cluster2">
       <button 
-        onclick= "playGame('card3')" 
+        onclick= "playGame('card3')"
         class="play-cards2">
         <img class="image-control" src="icons/tumblr_ov9n5hc3yf1vjrytfo1_250.jpg">
       </button>
-      <button 
-        onclick= "playGame('card2')" 
+      <button
+        onclick= "playGame('card2')"
         class="play-cards2">
         <img class="image-control" src="icons/tumblr_pmbb860gw11vsss7oo1_250.png">
       </button>
       <button 
-        onclick= "playGame('card1')" 
+        onclick= "playGame('card1')"
         class="play-cards2">
         <img class="image-control" src="icons/gamblerPepe.jpg">
       </button>
