--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
 
   <div class="main-Flex-container">
     <h2 class="header-control">PLAY WITH YOUR MOOD</h2>
-      <button class="reset-score-button"
-        onclick="handleResetButton();"
-        >
+      <button class="reset-score-button" onclick="handleResetButton();">
         RESET
       </button>
     <div class="button-cluster">
