--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </div>
     <div class="results-cluster">
       <p id="bank-control" class="bank-control js-bank-control"></p>
-      <p class="score-control"></p>
+      <p class="score-control js-score"></p>
       <div class="loan-div">
         <div id="loan-value-div-id" class="loan-value-div">
           <button id="loan-close-button" class="loan-close-button loan-close-button-js">
