--- a/index.html
+++ b/index.html
@@ -29,39 +29,15 @@
       <button class="reset-score-button" onclick="handleResetButton();">
         RESET
       </button>
-    <div class="button-cluster">
-      <button 
-        onclick= "playGame('card1')" 
-        class="play-cards1">
-        <img class="image-control" src="icons/tumblr_ot3rlf7RE91vjrytfo1_250.jpg">
-      </button>
-      <button 
-        onclick= "playGame('card3')"
-        class="play-cards1">
-        <img class="image-control" src="icons/tumblr_ot3rs3WB1p1vjrytfo1_250.jpg">
-      </button>
-      <button 
-        onclick= "playGame('card2')"
-        class="play-cards1">
-        <img class="image-control" src="icons/tumblr_ot5bxaNl3R1vjrytfo1_250.jpg">
-      </button>
+    <div class="button-cluster1">
+      <img class="image-control" onclick= "playGame('card1')" src="icons/tumblr_ot3rlf7RE91vjrytfo1_250.jpg">
+      <img class="image-control" onclick= "playGame('card3')" src="icons/tumblr_ot3rs3WB1p1vjrytfo1_250.jpg">
+      <img class="image-control" onclick= "playGame('card2')" src="icons/tumblr_ot5bxaNl3R1vjrytfo1_250.jpg">
     </div>
     <div class="button-cluster2">
-      <button 
-        onclick= "playGame('card3')"
-        class="play-cards2">
-        <img class="image-control" src="icons/tumblr_ov9n5hc3yf1vjrytfo1_250.jpg">
-      </button>
-      <button
-        onclick= "playGame('card2')"
-        class="play-cards2">
-        <img class="image-control" src="icons/tumblr_pmbb860gw11vsss7oo1_250.png">
-      </button>
-      <button 
-        onclick= "playGame('card1')"
-        class="play-cards2">
-        <img class="image-control" src="icons/gamblerPepe.jpg">
-      </button>
+      <img class="image-control" onclick= "playGame('card3')" src="icons/tumblr_ov9n5hc3yf1vjrytfo1_250.jpg">
+      <img class="image-control" onclick= "playGame('card2')" src="icons/tumblr_pmbb860gw11vsss7oo1_250.png">
+      <img class="image-control" onclick= "playGame('card1')" src="icons/gamblerPepe.jpg">
     </div>
     <div class="results-cluster">
       <p id="bank-control" class="bank-control js-bank-control"></p>
