--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
             &times;
           </button>
           <p onclick="loanAdd5()" id="loan-value5" class="loan-value5">500</p>
+          <button onclick="payForLoanFive()" id="pay-button-js5" class="pay-button pay-button5">Pay</button>
           <p onclick="loanAdd2()" id="loan-value2" class="loan-value2">200</p>
+          <button onclick="payForLoanTwo()" id="pay-button-js2" class="pay-button pay-button2">Pay</button>
         </div>
         <button id="loan-control-id" class="loan-control js-loan-control">
           GET LOAN
